# ChangeLog for net-analyzer/ettercap
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ettercap/ChangeLog,v 1.139 2013/09/21 13:58:05 ago Exp $

  21 Sep 2013; Agostino Sarubbo <ago@gentoo.org> ettercap-0.8.0.ebuild,
  ettercap-9999.ebuild:
  The sed for the remote_browser stuff is not needed anymore, see https://github
  .com/Ettercap/ettercap/commit/c00b9ceb2d9e6e9322f961d588278bfff528a400 by
  Gianfranco Costamagna <costamagnagianfranco@yahoo.it>

*ettercap-0.8.0 (20 Sep 2013)

  20 Sep 2013; Agostino Sarubbo <ago@gentoo.org> +ettercap-0.8.0.ebuild:
  Version bump to 0.8.0

  26 Aug 2013; Jeroen Roovers <jer@gentoo.org> ettercap-0.7.5.3.ebuild,
  ettercap-0.7.6.ebuild, ettercap-9999.ebuild:
  Drop HPPA keywording (bug #475232).

  03 Aug 2013; Agostino Sarubbo <ago@gentoo.org> ettercap-0.7.6.ebuild:
  Stable for sparc, wrt bug #475078

  07 Jul 2013; Agostino Sarubbo <ago@gentoo.org> ettercap-0.7.6.ebuild:
  Stable for x86, wrt bug #475078

  06 Jul 2013; Agostino Sarubbo <ago@gentoo.org> ettercap-0.7.6.ebuild:
  Stable for alpha, wrt bug #475078

  30 Jun 2013; Agostino Sarubbo <ago@gentoo.org> ettercap-0.7.6.ebuild:
  Stable for arm, wrt bug #475078

  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> ettercap-0.7.6.ebuild:
  Stable for ppc64, wrt bug #475078

  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> ettercap-0.7.6.ebuild:
  Stable for ppc, wrt bug #475078

  28 Jun 2013; Agostino Sarubbo <ago@gentoo.org> ettercap-0.7.6.ebuild:
  Stable for amd64, wrt bug #475078

  23 Apr 2013; Agostino Sarubbo <ago@gentoo.org> ettercap-9999.ebuild:
  Temporary fix for this commit: https://github.com/Ettercap/ettercap/commit/f79
  ee719cd736901d2bd1b5d896ec890343d9b0b

*ettercap-0.7.6 (27 Mar 2013)

  27 Mar 2013; Agostino Sarubbo <ago@gentoo.org> +ettercap-0.7.6.ebuild,
  ettercap-0.7.5.3.ebuild, ettercap-9999.ebuild:
  version bump to 0.7.6
