@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=dev-libs/libpcre dev-libs/openssl net-libs/libnet:1.1 >=net-libs/libpcap-0.8.1 sys-libs/zlib gtk? ( >=dev-libs/atk-1.2.4 >=dev-libs/glib-2.2.2:2 media-libs/freetype x11-libs/cairo x11-libs/gdk-pixbuf:2 >=x11-libs/gtk+-2.2.2:2 >=x11-libs/pango-1.2.3 ) ncurses? ( >=sys-libs/ncurses-5.3 ) plugins? ( >=net-misc/curl-7.26.0 sys-devel/libtool ) app-text/ghostscript-gpl sys-devel/flex virtual/yacc sys-devel/make >=dev-util/cmake-2.8 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
+DESCRIPTION=A suite for man in the middle attacks
+EAPI=5
+HOMEPAGE=https://github.com/Ettercap/ettercap
+IUSE=gtk ipv6 ncurses +plugins
+KEYWORDS=~alpha ~amd64 ~arm ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd
+LICENSE=GPL-2+
+RDEPEND=dev-libs/libpcre dev-libs/openssl net-libs/libnet:1.1 >=net-libs/libpcap-0.8.1 sys-libs/zlib gtk? ( >=dev-libs/atk-1.2.4 >=dev-libs/glib-2.2.2:2 media-libs/freetype x11-libs/cairo x11-libs/gdk-pixbuf:2 >=x11-libs/gtk+-2.2.2:2 >=x11-libs/pango-1.2.3 ) ncurses? ( >=sys-libs/ncurses-5.3 ) plugins? ( >=net-misc/curl-7.26.0 sys-devel/libtool )
+SLOT=0
+SRC_URI=https://github.com/Ettercap/ettercap/archive/v0.8.0.tar.gz -> ettercap-0.8.0.tar.gz
+_eclasses_=cmake-utils	92319f03251f1235bc887cc84e5aef21	eutils	4878e7f88afc0ba0866ac112190b0fd4	flag-o-matic	08a40a43c401c96d16477c02e56d9a64	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=9849edf4a40804e786646f51146c622e
