@@ -6,24 +6,25 @@ DIST ettercap-0.7.6.tar.gz 819084 SHA256 c9bfcac179964ba449138652655dee0e1db0110
 DIST ettercap-0.8.0.tar.gz 7069131 SHA256 8013e2bbfc69af2939d8a40e6b31de5016fe75401e4b73207a0a8ac9053ac9bc SHA512 6d32b229378af5aea1dc82537f84a36c557021a01ccf40f228e69f6e39baa3f3becbb6138417bcad2951811d9ea57e89f960f7bb132fc09502e0b08f7a4ca813 WHIRLPOOL 87fc8ffbfa8ebe67b382888b2b9e5aa5ef9059bc5c46c52628e13f62bb4f519362834d865ec4e51ed5b3db7de5832dc0756a708768dc040dd6aa0264db2f474b
 EBUILD ettercap-0.7.5.3.ebuild 1563 SHA256 b6ee05b3e08c7b4c23fcc02e458ccd008cea9ada894ec63d9195beb2fc60effc SHA512 e0243d469d53c06301308a023b93424bb0ec5fa409b2fa7b6ace2104a48ff2cea0b542176f33bf85c40858fffac17aeebe892d8485dd1cc93db50815c2985505 WHIRLPOOL 07109982c205b26a175e787d69f8181fbe929a87327e4845a76522553041beaa10d215ccfa57da9c12bf9b46c54ba782951a97634cebc8cd4f2627589b55ee2c
 EBUILD ettercap-0.7.6.ebuild 1561 SHA256 f3e913a93eb613a960e9dadd3e47f3adb35d855699966fe3923cf31d994656f3 SHA512 be9c56a9b81cba0f13eae8ca28b66feec1933144419a648356faa2e2aeca0d2d0c680056f3696ee391547022f9a7f7d0dc1b3ac8847735f5a99858a7a610ec3c WHIRLPOOL 35bb805237c64bfac80ff4c18f658396dff66a85a4653ae237fb994153302ea041ad0dc71bf09abc957a9a92ac31c7c033f6326a366cf810b991b5c33fd20535
+EBUILD ettercap-0.8.0-r1.ebuild 1409 SHA256 5dc5790bab521f52e82ea951c6daaef182445c9cc7c177bc104aca5c37e02939 SHA512 ffa1ef6ead753c97026b2f070caf2f9361f9e5e8dffd45473f0e8713b3b48e34928eb8ec5486a782901742c3719a18292cfab78d6bce6f3c9b6c53a4d12aa095 WHIRLPOOL 320c8524a496be8a10dfab545fad467180d6a0efd53f34da3939fded264fa9a2a5da6c91fee278e39984ac3f729ac5b4f05084be89056d696d64cd8d2c04ccb5
 EBUILD ettercap-0.8.0.ebuild 1432 SHA256 f4e6a5a2e726b684ea8ea0238d877a8d6535f4e4caff602b55a78095c1f2a63a SHA512 c2503b657ef938ffa9abea8fe13100bdf08b50285315733d61f43d79c03534bd720648d9e0aa7f9f5fdfa12db8c4b3df778fdd62a509e0963fa581bae10ed5ac WHIRLPOOL e3c9d222166bae77f9f08fdffbf4b777f7642d46d4015e825655fc13807bffe48ece8ef6f8c2ee5c179ef04fb0ee1b1c06bdab3b2ba9f6761fb47080bec613fc
 EBUILD ettercap-9999.ebuild 1371 SHA256 28787011f078e4ca068402ab8802f852e3637bbd53e1b6250746188c9351595c SHA512 f6c8627c7ffdefcf756366d49c91ebdf81eba3587c76786431dcb0dc5ccaabd025bfab3c1cb74ff76e72bc65d4a8e39937fc030a6beb5735c0ab36e05d4ebea9 WHIRLPOOL 8f75b9c84c7078ce97a8042ec5b1327fb4b175867ccf14feb924f5c3c4cbb043fb9cac65a220140ed4948d6ff7227ef6662d193bdba7f138f57b436885014699
-MISC ChangeLog 18650 SHA256 dc4ff482017e2ec111aa708ba92aa78e93c1536d298ccf9e2e6ddb60f7d9e98b SHA512 9f2097c082d559aad4478ba97aac0044058930e9f206edaf06cf0901b5c779266b0ef7be60fb2c1162eadaddf7259c89d560fd51a10b24a0b317e724d441eca7 WHIRLPOOL 940ead4c1530f5215364066d1ac6fc9d9fe26a9c1e4230e9b48ce9baac1284e3d7d9ab51bf2684b06e42ab896bc23acd836d8d342ec4106eae29e6abacd3a7f2
+MISC ChangeLog 18848 SHA256 558069a1240fc0f954f85cfe8b0150c16520ab1efbff14343e4b029694729662 SHA512 d55df3425c347d9a4348172dd09b2639acf7e00d3d4e8d666d7d959ea6211eafda9e901584d4cd6f3b22cf1c9197749ef95e9d943909c042c460742d199f5b2d WHIRLPOOL 0003c8ba76dd82da3b1051275cc7218ac9aab99eb2d6681cf0dafe40e531fe411df7db4cba2c6bf0ba8238caa5a91dd31387f9b51a25ae586a86b4e5708ff41a
 MISC metadata.xml 427 SHA256 df1df8dc55dfb15c332c0938d2f83c895064ee666f794954f94b65316e887b7e SHA512 b60f7bbcca835cccbd88128a4a15c08735b8cf0c454b4c6641c5c884d014f476daaf518758ce5f33882641681e3305090c7770cec3a14c73c59fbc97ba65b078 WHIRLPOOL 3f07037b068ca3ead4d9fcc0fd790a6b6896d6fd045798c0cdaa02ee66e05ce9d506f5b87c3625141d79ee3d388ff7ec033e4a863e17271f5e971a7b6c3eb5d6
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSPaUdAAoJELp701BxlEWfU7kP/1RmYcidwVz3Y58mCN19KGJh
-YYBLXZa2rYgCxwzfuxF5vpQN3VdtFhU6zsFg4dyBdzqLwIFbmwm3HA6PAUCYAEOt
-xngcPH3BEGf7yKBb1qh9pDRFI2u/0ABCc0NgcM5SrI9zF/EJ7oGo5LFuDpci7A5l
-BjTFK7j7fgESMV5D1CpvPdhkTVK+ZQxc97q/TwG5y2kv7UECRTyEqVu71oxn78Ak
-UKqbQ/EP4Kh10PkLvFmI1QHUNGc5hNi19FkGN/lRR0AhJ8fYRfoztjl8aTE7Gydl
-gdtdr7nS7UF2qZ2sRCg2u3coYCz4rkmSRwYnvKdyWk/52OiWT9ZhLomBdGiVQMw+
-NHl7u+8sqB3EfVnsyekjoggRTOM42lBBTHH2ccNzWmSJ/ZGLcu9BJHuf8rEn33kJ
-q+NlM9nVdwUdEsTfLBmoOuQ1mTnIYs7xG+z3QqqoB6KEjsR/zXecKW6g02PuhXZg
-ieYFo4NjI3/UZhixQvvmsozdwrHE3NrExjtC6LKkEPVxe5v21wVbAFjngumorzNQ
-FLd+3baABhDJQsvZGHopcrp3elwhCfXHiLS0PzMf3/tAQ5Y9C1GzTIhQ/wyRN/fv
-/d/QQEmc0TBFwx3R4oQ8YlyfalIZ17z7Uzz5AqOvWru+b3L9JusyjKq/Ve1+//73
-6pDyY6RtYsZ8Cz9O74WO
-=jVj2
+iQIcBAEBCgAGBQJSakhNAAoJELp701BxlEWfyBYP/2CBxfNaPZ0CDFNEa1/Ku8Pt
+8+7YQ0mMqdHhyQGbFnHydQdrh5084tV15HPTAgV62cbsxzY128JrNn81iWspePBg
+RfizLWF9uY4WZcD9bECMo2DaesAUMON/fkxcBe42KK8Ca0OcEke6fzPRRYM4Z6sh
+9tKA2UTHTJqw2MY1zVsapEvKMPD+5DEXtqmXPzAXZIPabXq7ThDzwdwDAiiBU0sp
+BHI4hp2698kzHS2od+wpYX5dA9mn8xfQFfFZ5YNOIflptAfTs7frob74fwoaNxde
+ZeZQS1e9P/JJQeqStF67lxr7U8xssvMRdDSeOxWrNcK9ygJtZ8pnO9aUEiB3eQ/a
+y6yk0jQHKe7BwkiUfRPnFVedJDtlg5N3QxmL58TLHZOpV3eaZYb6Y5G6+0GSusaC
+ayMo7UrdPs/1eqGsHzSzKVYg73V9piJTA1LbPPe0LHWAT0P/WI9Hph4jRCR2rc4V
+q4eB9xcfsOzKGUl733kXWPiue7lB2K+wbJD3hkx70/x4Tmd9O/9TLeB9sN5Yga+2
+Dk/cZDWY07TTOVvIaH8CDG2bzEbpri1ayjczehPsSXMdmAi2Mj3jFhp41smZ914G
+spXVspaZ3+OLyoyse2f9V4UqWMk7FLvxUnKgbI2jlhoxLiUG0JDMwj/c6aGTMxJK
+gw0yLYQZ4Szimu7Z9PmN
+=qDbl
 -----END PGP SIGNATURE-----
