@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/ettercap
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ettercap/ChangeLog,v 1.139 2013/09/21 13:58:05 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ettercap/ChangeLog,v 1.140 2013/10/25 10:30:35 ago Exp $
+
+*ettercap-0.8.0-r1 (25 Oct 2013)
+
+  25 Oct 2013; Agostino Sarubbo <ago@gentoo.org> +ettercap-0.8.0-r1.ebuild:
+  Force SSL to on because the entire package, now is based on it; wrt to bug
+  #489226
 
   21 Sep 2013; Agostino Sarubbo <ago@gentoo.org> ettercap-0.8.0.ebuild,
   ettercap-9999.ebuild:
